samples/_failures_safe/1761208927_b4aac2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1edb080.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_e1edb080.c:183: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_e1edb080.c:182:5: error: expected declaration or statement at end of input
  182 |     for
      |     ^~~
